<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.UserManagementActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_management"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:background="@drawable/border_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_user"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"/>
        
        <EditText
            android:id="@+id/edtNewUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_user"
            android:inputType="textPersonName"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/edtNewLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname_user"
            android:inputType="textPersonName"
            android:layout_marginBottom="8dp"/>
        
        <EditText
            android:id="@+id/edtNewUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_user"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="8dp"/>
        
        <EditText
            android:id="@+id/edtNewUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_user"
            android:inputType="textPassword"
            android:layout_marginBottom="12dp"/>
        
        <Button
            android:id="@+id/btnAddUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_user"
            android:textColor="@android:color/white"
            android:backgroundTint="#007AC1"/>
    </LinearLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_users"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUsers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_user_list"/>

</LinearLayout>