<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                android:layout_width="115dp"
                android:layout_height="110dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:src="@drawable/fitness"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fitness"
                    android:textSize="45sp"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/blue_grey"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app"
                    android:textColor="@color/blue_grey"
                    android:textSize="45sp"/>
            </LinearLayout>

            <!-- Поле Email -->
            <EditText
                android:id="@+id/emailEdt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:hint="@string/email"
                android:textAlignment="center"
                android:textColorHint="@color/blue_grey"
                android:textSize="16sp"
                android:ems="10"
                android:background="@drawable/edittext_background"
                android:inputType="textEmailAddress"/>

            <!-- Поле Телефон -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/blue_grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneEdt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/phone_user"
                    android:textSize="16sp"
                    android:background="@drawable/edittext_background"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Поле Пароль с глазом -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/blue_grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passEdt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/pass"
                    android:textSize="16sp"
                    android:background="@drawable/edittext_background"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Поле Подтверждение пароля с глазом -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/blue_grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/passConfirm"
                    android:textSize="16sp"
                    android:background="@drawable/edittext_background"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Кнопка регистрации -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signupBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:background="@drawable/red_button_background"
                android:layout_margin="32dp"
                style="@android:style/Widget.Button"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <!-- Ссылка на логин -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/are_you_member"
                    android:layout_marginTop="30dp"
                    android:textSize="15sp"
                    android:textColor="@color/blue_grey"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logg"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginStart="4dp"/>
            </LinearLayout>

            <!-- Политика безопасности -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="27dp"
                android:layout_marginBottom="16dp"
                android:paddingHorizontal="24dp">

                <TextView
                    android:id="@+id/textViewPolitics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="10sp"
                    android:gravity="center"
                    android:background="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>