<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <!-- Основной контент -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/holo_blue_light"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <!-- Кнопка Hamburger Menu -->
                <ImageButton
                    android:id="@+id/nav_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_menu"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="12dp"
                    android:contentDescription="@string/open_navigation_drawer"/>

                <!-- Иконка уведомлений -->
                <ImageButton
                    android:id="@+id/notifications_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_notifications"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/notifications"/>

                <!-- Иконка поиска (лупа) -->
                <ImageButton
                    android:id="@+id/search_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_search"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/search"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/back_04"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25"/>

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Добро пожаловать в FitnessApp!"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="#55000000"
            android:padding="4dp"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline"/>

        <!-- Кнопка тренировок -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/workoutsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:text="@string/workout"
            android:background="@drawable/red_button_background"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- Кнопка профиля -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:text="@string/user_account"
            android:background="@drawable/red_button_background"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@+id/workoutsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- Кнопка управления пользователями -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/settingsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:text="@string/users"
            android:background="@drawable/red_button_background"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@+id/profileButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_nav_menu"
            app:labelVisibilityMode="labeled"
            app:itemTextColor="@color/black"
            app:itemIconTint="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Боковое меню -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:elevation="16dp"/>

</androidx.drawerlayout.widget.DrawerLayout>